--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <nav class="navbar">
         <h1 style="color: rgb(87, 87, 255);">Booksky</h1>
         <ul class="menu">
-            <li class="menuitems">Home</li>
-            <li class="menuitems">Contact us</li>
+            <li class="menuitems"><a href="index.html">Home</a></li>
+            <li class="menuitems"><a href="contact.html">Contact</a></li>
         </ul>
         <div class="menu-toggle" onclick="showNavbar()">
             <i class="fa-solid fa-bars"></i>
