--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <i class="fa-solid fa-xmark"></i>
         </p>   
         <ul class="side-navbar-links">
-            <li class="side-navbar-link">Home</li>
-            <li class="side-navbar-link">Contact us</li>
+            <li class="side-navbar-link"><a href="index.html">Home</a></li>
+            <li class="side-navbar-link"><a href="contact.html">Contact us</a></li>
         </ul>    
           
     </div>
